fix stuck header z-index

--- a/style/site/header/_header-stuck.scss
+++ b/style/site/header/_header-stuck.scss
@@ -7,7 +7,7 @@ $size__header-height-stuck: 81px;
 	right: 0;
 	width: 100%;
 	background: $color__background-header;
-	z-index: 1;
+	z-index: 999;
 	box-shadow: 0 0 3px rgba(0,0,0,.2);
 	animation-name: sticky-header;
 	animation-duration: .5s;
